--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.4",
+    "gulp-webserver": "rdy/gulp-webserver#8eb2b7ea1ed23945cc96612fe8b5e1ba8a86da76",
     "gulp-zip": "^2.0.2",
     "highland": "^2.5.1",
     "imports-loader": "^0.6.4",
